Fixed Brute and Scrapper Energy Aura => Entropic Auro to properly show recharge bonus

--- a/Hero Designer/Data/db/Player/Class_Scrapper_Scrapper_Defense.Energy_Aura.json
+++ b/Hero Designer/Data/db/Player/Class_Scrapper_Scrapper_Defense.Energy_Aura.json
@@ -1262,6 +1262,7 @@
     {
       "CastTimeReal": 0.73,
       "ToggleCost": 0.26,
+      "IsModified": true,
       "PowerIndex": 6733,
       "PowerSetID": 3301,
       "PowerSetIndex": 3,
@@ -1310,17 +1311,16 @@
       "DescShort": "Toggle: Self +Res(Knockback, Repel, Disorient, Hold, Sleep, Immobilize, Teleport, DeBuff DEF), Self +Recharge, Foe -Recharge",
       "DescLong": "Entropic Aura diminishes and dampens the energy of controlling type effects.  The shield makes you resistant to Knockback, Repel, Disorient, Hold, Sleep, Immobilization, and enemy Teleportation for as long as you can keep this toggle power active. Entropic Aura also grants you good resistance to Defense Debuffs as well as providing you a recharge bonus for each foe in melee, up to the first 10 foes.  Foes that get close to the user will have their own recharge rate reduced.  Recharge: Fast",
       "SetTypes": [],
+      "AlwaysToggle": true,
       "Level": 10,
       "VariableEnabled": true,
       "VariableName": "Targets",
-      "VariableMin": 1,
       "VariableMax": 10,
       "NIDSubPower": [],
       "UIDSubPower": [],
       "IgnoreEnh": [],
       "Ignore_Buff": [],
       "MutexAuto": true,
-      "NeverAutoUpdate": true,
       "ForcedClass": "",
       "Effects": [
         {
@@ -1368,7 +1368,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 1,
           "EffectType": 20,
           "MezType": 5,
           "Summon": "",
@@ -1402,7 +1401,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 2,
           "EffectType": 19,
           "MezType": 4,
           "Summon": "",
@@ -1438,7 +1436,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 3,
           "EffectType": 19,
           "MezType": 5,
           "Summon": "",
@@ -1475,7 +1472,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 4,
           "EffectType": 20,
           "MezType": 8,
           "Summon": "",
@@ -1510,7 +1506,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 5,
           "EffectType": 19,
           "MezType": 8,
           "Summon": "",
@@ -1547,7 +1542,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 6,
           "EffectType": 20,
           "MezType": 14,
           "Summon": "",
@@ -1580,7 +1574,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 7,
           "EffectType": 19,
           "MezType": 10,
           "Summon": "",
@@ -1615,7 +1608,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 8,
           "EffectType": 19,
           "MezType": 2,
           "Summon": "",
@@ -1650,7 +1642,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 9,
           "EffectType": 19,
           "MezType": 9,
           "Summon": "",
@@ -1685,7 +1676,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 10,
           "EffectType": 19,
           "MezType": 3,
           "Summon": "",
@@ -1722,7 +1712,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 11,
           "EffectType": 20,
           "MezType": 10,
           "Summon": "",
@@ -1756,7 +1745,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 12,
           "EffectType": 20,
           "MezType": 2,
           "Summon": "",
@@ -1790,7 +1778,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 13,
           "EffectType": 20,
           "MezType": 9,
           "Summon": "",
@@ -1824,7 +1811,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 14,
           "EffectType": 20,
           "MezType": 3,
           "Summon": "",
@@ -1858,7 +1844,6 @@
           "Reward": "",
           "EffectId": "Res_Boolean",
           "Special": "",
-          "nID": 15,
           "EffectType": 28,
           "ETModifies": 5,
           "Summon": "",
@@ -1892,7 +1877,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 16,
           "EffectType": 28,
           "ETModifies": 5,
           "Summon": "",
@@ -1926,7 +1910,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 17,
           "EffectType": 28,
           "ETModifies": 40,
           "Summon": "",
@@ -1960,7 +1943,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 18,
           "EffectType": 28,
           "ETModifies": 25,
           "Summon": "",
@@ -1994,7 +1976,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 19,
           "EffectType": 28,
           "ETModifies": 32,
           "Summon": "",
@@ -2028,7 +2009,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 20,
           "EffectType": 28,
           "ETModifies": 11,
           "Summon": "",
@@ -2062,7 +2042,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 21,
           "EffectType": 28,
           "ETModifies": 16,
           "Summon": "",
@@ -2096,7 +2075,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 22,
           "EffectType": 28,
           "ETModifies": 17,
           "Summon": "",
@@ -2130,7 +2108,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 23,
           "EffectType": 20,
           "MezType": 4,
           "Summon": "",
@@ -2164,7 +2141,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 24,
           "EffectType": 20,
           "MezType": 5,
           "Summon": "",
@@ -2197,7 +2173,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 25,
           "EffectType": 19,
           "MezType": 4,
           "Summon": "",
@@ -2232,7 +2207,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 26,
           "EffectType": 19,
           "MezType": 5,
           "Summon": "",
@@ -2268,7 +2242,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 27,
           "EffectType": 20,
           "MezType": 8,
           "Summon": "",
@@ -2302,7 +2275,6 @@
           "Reward": "",
           "EffectId": "Ones",
           "Special": "",
-          "nID": 28,
           "EffectType": 19,
           "MezType": 8,
           "Summon": "",
@@ -2338,7 +2310,6 @@
           "Reward": "",
           "EffectId": "StealthOn",
           "Special": "",
-          "nID": 29,
           "EffectType": 19,
           "MezType": 11,
           "Summon": "",
@@ -2377,7 +2348,6 @@
           "Reward": "",
           "EffectId": "StealthOn",
           "Special": "",
-          "nID": 30,
           "EffectType": 19,
           "MezType": 11,
           "Summon": "",
@@ -2407,15 +2377,14 @@
         {
           "MagnitudeExpression": "",
           "Probability": 1.0,
-          "Mag": 0.05,
-          "MagPercent": 5.0,
+          "Mag": 0.085,
+          "MagPercent": 8.5,
           "Duration": 2.25,
           "DisplayPercentage": true,
           "BaseProbability": 1.0,
           "Reward": "",
-          "EffectId": "StealthOn",
+          "EffectId": "Ones",
           "Special": "",
-          "nID": 31,
           "EffectType": 9,
           "ETModifies": 25,
           "Summon": "",
@@ -2423,7 +2392,7 @@
           "UIDClassName": "",
           "nIDClassName": -1,
           "ToWho": 2,
-          "Scale": 0.05,
+          "Scale": 0.085,
           "nMagnitude": 1.0,
           "nDuration": 2.25,
           "Aspect": 3,
@@ -2448,9 +2417,8 @@
           "VariableModified": true,
           "BaseProbability": 1.0,
           "Reward": "",
-          "EffectId": "StealthOn",
+          "EffectId": "Ones",
           "Special": "",
-          "nID": 32,
           "EffectType": 9,
           "ETModifies": 25,
           "Summon": "",
@@ -2485,7 +2453,6 @@
           "Reward": "",
           "EffectId": "StealthOn",
           "Special": "",
-          "nID": 33,
           "EffectType": 9,
           "ETModifies": 25,
           "Summon": "",
@@ -3912,8 +3879,8 @@
         {
           "MagnitudeExpression": "",
           "Probability": 1.0,
-          "Mag": 374.813782,
-          "MagPercent": 374.813782,
+          "Mag": 334.655273,
+          "MagPercent": 334.655273,
           "VariableModified": true,
           "BaseProbability": 1.0,
           "Reward": "",
@@ -5158,8 +5125,8 @@
         {
           "MagnitudeExpression": "",
           "Probability": 1.0,
-          "Mag": 599.702,
-          "MagPercent": 599.702,
+          "Mag": 535.4484,
+          "MagPercent": 535.4484,
           "Duration": 180.0,
           "BaseProbability": 1.0,
           "Reward": "",
