Separated the PvE and PvP Invention Set Editors

--- a/Hero Designer/Hero Designer.csproj
+++ b/Hero Designer/Hero Designer.csproj
@@ -74,7 +74,19 @@
   <ItemGroup>
     <Compile Include="clsHook.cs" />
     <Compile Include="FileAssocation.cs" />
+    <Compile Include="Forms\frmSetListingPvP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmSetListingPvP.Designer.cs">
+      <DependentUpon>frmSetListingPvP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainUILogic.cs" />
+    <Compile Include="Forms\OptionsMenuItems\DbEditor\frmSetEditPvP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OptionsMenuItems\DbEditor\frmSetEditPvP.Designer.cs">
+      <DependentUpon>frmSetEditPvP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\WindowMenuItems\frmMMPowers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -258,6 +270,12 @@
     <None Include="Resources\optTO.Image.png" />
     <None Include="Resources\optSO.Image.png" />
     <None Include="Resources\optDO.Image.png" />
+    <EmbeddedResource Include="Forms\frmSetListingPvP.resx">
+      <DependentUpon>frmSetListingPvP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OptionsMenuItems\DbEditor\frmSetEditPvP.resx">
+      <DependentUpon>frmSetEditPvP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\WindowMenuItems\frmMMPowers.resx">
       <DependentUpon>frmMMPowers.cs</DependentUpon>
     </EmbeddedResource>
